online_judge/usermodule/static/all_submissions/280/error_4.txt
/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/280/codefile_4.cpp: In function ‘int main()’:
/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/280/codefile_4.cpp:71:20: error: ‘edl’ was not declared in this scope
         cout<<ans<<edl;
                    ^~~
